# AIReceptionist

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml
documentation/: architecture.md  configuration-reference.md  deployment-guide.md  development-guide.md  function-tools-reference.md  index.md  multi-business-setup.md  troubleshooting.md
receptionist/: agent.py  prompts.py
scripts/: pre-commit
tests/: test_prompts.py
